--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
    <string name="app_name">IconMobileSample</string>
+
+   <!--Bottom menu-->
+   <string name="products">Products</string>
 </resources>
