Add save product feature

--- a/feature_products/src/main/res/values/strings.xml
+++ b/feature_products/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="data_not_found">Data not found</string>
     <string name="retry">Retry</string>
     <string name="some_error_occurred">Some error occurred</string>
+    <string name="enter_name">Enter name</string>
+    <string name="enter_brand_name">Enter brand name</string>
+    <string name="enter_description">Enter description</string>
+    <string name="save_product">save</string>
 </resources>
